force-app/main/default/objects/PoC_Package_Settings__c/PoC_Package_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These setting are used by the Insolvency Stream solution, as input into the Proof of Claims form generation.</description>
    <label>PoC Package Settings</label>
</CustomObject>