force-app/main/default/objects/PoC_Package_Settings__c/fields/Account_Statement_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Account_Statement_Not_Allowed__c</fullName>
    <description>Account statement should be visible only to some particular trustee</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account statement should be visible only to some particular trustee</inlineHelpText>
    <label>Account Statement Not Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>