force-app/main/default/objects/PoC_Package_Settings__c/fields/Attachment_Required_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Required_Email_Templates__c</fullName>
    <description>Attachment Required Email Templates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Attachment Required Email Templates</inlineHelpText>
    <label>Attachment Required Email Templates</label>
    <length>250</length>
    <type>Text</type>
</CustomField>