force-app/main/default/objects/PoC_Package_Settings__c/fields/CEO_Signature__c.field-meta.xml
<CustomField>
    <fullName>CEO_Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image CEO Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>