force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Address_1__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Address_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Address 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>