force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>