force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_City__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>