force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Email Address</label>
    <type>Email</type>
</CustomField>