force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Name_2__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Name_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>