force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>