force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Postal Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>