force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Province_Short_Code__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Province_Short_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Province Short Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>