force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Office_Website__c.field-meta.xml
<CustomField>
    <fullName>CFG_Office_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Office Website</label>
    <length>50</length>
    <type>Text</type>
</CustomField>