force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Payment_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CFG_Payment_Postal_Code__c</fullName>
    <description>This field is used for CFG Mailing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used for CFG Mailing</inlineHelpText>
    <label>CFG Payment Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>