force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Trustee_Email_Default_Content__c.field-meta.xml
<CustomField>
    <fullName>CFG_Trustee_Email_Default_Content__c</fullName>
    <description>Contains the (HTML optional) default content to be pre-populated when the Email Trustee page is opened from an Insolvency Account record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contains the (HTML optional) default content to be pre-populated when the Email Trustee page is opened from an Insolvency Account record.</inlineHelpText>
    <label>CFG Trustee Email Default Content</label>
    <type>TextArea</type>
</CustomField>