force-app/main/default/objects/PoC_Package_Settings__c/fields/CFG_Trustee_Email_Default_Subject__c.field-meta.xml
<CustomField>
    <fullName>CFG_Trustee_Email_Default_Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CFG Trustee Email Default Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>