force-app/main/default/objects/PoC_Package_Settings__c/fields/Client_Company_Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Company_Creditor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Company Creditor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>