force-app/main/default/objects/PoC_Package_Settings__c/fields/Client_Company_Name_French__c.field-meta.xml
<CustomField>
    <fullName>Client_Company_Name_French__c</fullName>
    <description>French Client Company Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Company Name French</label>
    <length>255</length>
    <type>Text</type>
</CustomField>