force-app/main/default/objects/PoC_Package_Settings__c/fields/Follow_Up_Email_Required_Templates__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Email_Required_Templates__c</fullName>
    <description>Follow up email required templates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Follow up email required templates</inlineHelpText>
    <label>Follow Up Email Required Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>