force-app/main/default/objects/PoC_Package_Settings__c/fields/Header_logo__c.field-meta.xml
<CustomField>
    <fullName>Header_logo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Header logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>