force-app/main/default/objects/PoC_Package_Settings__c/fields/Insolvency_Template_Header__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Template_Header__c</fullName>
    <description>Insolvency Default Tempate Id&apos;s with Header</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insolvency Default Tempate Id&apos;s with Header</inlineHelpText>
    <label>Insolvency Template Header</label>
    <length>225</length>
    <type>Text</type>
</CustomField>