force-app/main/default/objects/PoC_Package_Settings__c/fields/Insolvency_Template_WoHeader__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Template_WoHeader__c</fullName>
    <description>Insolvency Default Tempate Id&apos;s without Header</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insolvency Default Tempate Id&apos;s without Header</inlineHelpText>
    <label>Insolvency Template WoHeader</label>
    <length>50</length>
    <type>Text</type>
</CustomField>