force-app/main/default/objects/PoC_Package_Settings__c/fields/Insolvency_Template_WoHeader_French__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Template_WoHeader_French__c</fullName>
    <description>Insolvency Template WoHeader French</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insolvency Template WoHeader French</inlineHelpText>
    <label>Insolvency Template WoHeader French</label>
    <length>150</length>
    <type>Text</type>
</CustomField>