force-app/main/default/objects/PoC_Package_Settings__c/fields/LoR_Notice_1_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>LoR_Notice_1_Template_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LoR Notice 1 Template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>