force-app/main/default/objects/PoC_Package_Settings__c/fields/Notice_to_Trustee_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Trustee_Template_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notice to Trustee Template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>