force-app/main/default/objects/PoC_Package_Settings__c/fields/Point_Of_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact_Name__c</fullName>
    <description>Point of Contact Name for the respective bank</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Point of Contact Name for the respective bank</inlineHelpText>
    <label>Point Of Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>