force-app/main/default/objects/PoC_Package_Settings__c/fields/Point_Of_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact_Title__c</fullName>
    <description>Point of Contact Title of the point of contact name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Point Of Contact Title</label>
    <type>TextArea</type>
</CustomField>