force-app/main/default/objects/PoC_Package_Settings__c/fields/Trustee_Email_Org_Wide_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Email_Org_Wide_Address_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trustee Email Org Wide Address Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>