force-app/main/default/objects/PoC_Package_Settings__c/fields/Unsecured_Type_Hearder__c.field-meta.xml
<CustomField>
    <fullName>Unsecured_Type_Hearder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Unsecured Type Hearder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>