force-app/main/default/objects/PoC_Package_Settings__c/fields/Withdrawal_PoC_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_PoC_Template_Id__c</fullName>
    <description>Id of Withdrawal PoC Email Template, used to sent Withdrawal PoC request on Insolvency Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Withdrawal PoC Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>