force-app/main/default/objects/PoC_Package_Settings__c/fields/Withdrawal_PoC_Template_ID_French__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_PoC_Template_ID_French__c</fullName>
    <description>Withdrawal PoC Template ID French</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Withdrawal PoC Template ID French</inlineHelpText>
    <label>Withdrawal PoC Template ID French</label>
    <length>150</length>
    <type>Text</type>
</CustomField>